feat: implement tender saving functionality with new API endpoints and backend persistence